package edu.uees.tutorias.patrones.factory;

public interface Notificacion {
    void enviar(String destino, String mensaje);
}