package edu.uees.tutorias.patrones.strategy;

public interface EstrategiaCancelacion {
    boolean puedeCancelar(int horasAnticipacion);
}